[package]
name = "diesel-graphql-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
sqlx = { version = "0.5.9", features = ["runtime-actix-native-tls", "mssql"] }
sqlx-migrate = { version = "0.3.5" }
juniper = "0.15.7"
futures = "0.3.19"
